wwwroot/css/green4.css
html {
    font-size: 18px;
    background-color: #121212;
    font-family: Consolas, Menlo-Regular, Copperplate;
}



@media only screen and (max-width: 1000px) {
    /*  html {
        font-size: 20px;
    }*/



    .greeting {
        font-size: 1rem !important;
        /*font-size: calc(1.5vw + 1.5vh + 0.75vmin) !important;*/
    }



    .realName {
        font-size: 3rem !important;
    }

    .workName {
        font-size: 2rem !important;
    }

    .btn {
        padding: calc(1.2vw + 1.2vh + 0.6vmin);
        /*font-size: calc(1.2vw + 1.2vh + 0.6vmin) !important;*/
    }

    .fa:before {
        /*font-size: calc(3.2vw + 3.2vh + 1.6vmin) !important;*/
    }

    .fa {
        /* font-size: calc(3.2vw + 3.2vh + 1.6vmin) !important;*/
    }

    .side-menu {
        display: none
    }
    /* .selection {
        font-size: calc(3.2vw + 3.2vh + 1.6vmin) !important;
        padding-top: calc(1vw + 1vh + 0.5vmin) !important;
        z-index: 3;
    }*/




    /*  .realName, .workName {
        font-size: calc(3.6vw +3.6vh + 1.8vmin) !important;
        background-color:blueviolet;
    }*/
}

.fa:before {
    font-size: 48px;
    color: cyan;
}

.fa {
    padding: 0 0 0 2rem;
}

@media only screen and (min-width: 1001px) {

    #menu {
        opacity: 1;
    }

    #menuToggle {
        display: none !important;
    }

    .foggy {
        filter: blur(0px) !important;
    }
}

@media only screen and (max-width: 600px) and (orientation:landscape) {

    .fa {
        padding: 2rem 0 0 0 !important;
    }
}

@media only screen and (max-width: 1000px) {
    html {
        z-index: 0;
    }
}

@media only screen and (max-width: 768px) {
    .whiteBox {
        padding: 80px 0px !important;
    }
}

@media only screen and (max-width: 480px) {
    .whiteBox {
        padding: 60px 0px !important;
    }
}






body {
    /* background-color: #121212;
    font-family: Consolas;
    margin: 0 auto;
    max-width: 1040px;
    width: 100%;*/
    /*/////////////*/
    /* background-color: #121212;
    font-family: Consolas;
    align-self: center;
    position: relative;
    max-width: 2560px;
    margin: 0 auto;*/
}

.content__wrapper {
    /*        background-color: red;
*/ max-width: 1280px;
    width: 90%;
    margin: 0 auto;
    position: relative;
}

main {
    /*    background-color: rgba(255, 255, 255, 0.2);
*/ /*margin: 0px auto;
    width: 100%;*/ /*
    max-width: 2560px;
    min-height: 100vh;*/
    /*overflow: auto;*/ /*IF REMOVED, BUGS APPEAR*/
    overflow: hidden;
    /*    position: relative;*/
}

.my-container {
    margin: 0px auto;
    padding: 100px 0px;
    max-width: 2560px;
}

.home {
    /*    height: auto;*/
    min-height: 100vh;
    /*    REMOVE IF PAGE IS LONGER width: 100%;
*/ display: flex;
    align-items: center;
    padding-top: 0px;
}

.whiteBox {
    /*        background: rgba(255, 255, 255, 0.5);
*/ opacity: 1;
    max-width: 100%;
    max-height: 50rem;
    /*margin: 20vh auto;
    padding: 0rem;*/
    margin: 0px auto;
    padding: 100px 0px;
}

h1, h2, h3, h4, h5, a {
    color: #ccd6f6;
}


.greeting {
    vertical-align: text-bottom;
    font-size: 1rem;
    font-weight: 400;
    color: cyan;
    display: inline-block;
    opacity: 1;
}

.realName {
    color: #ccd6f6;
    font-size: 5rem;
    font-weight: 400;
}

.workName {
    color: #8892b0;
    font-size: 4rem;
}

.headerAnim {
    display: inline-block;
    opacity: 1;
}

.hi {
    font-size: 4rem;
}

.headerAnimComma {
    display: inline-block;
    opacity: 1;
}

.headerAnimExclamation {
    display: inline-block;
    opacity: 1;
    position: absolute;
    font-size: 4rem;
}

@media only screen and (max-width: 750px) {
    /*    @media (max-width: 500px) { */
    contents {
        padding: 9em;
    }
}

.contents {
    padding: 9em;
}

.buttonsContainer {
    /*align-items: center;
    display: flex;*/
    /* flex-direction: column; */
    /*text-align: center;
    padding-top: 1rem;*/
    /* padding-right: 1rem; */
    /*padding-bottom: 1rem;
    justify-content: space-around;
    max-width: 500px;*/
    align-items: center;
    display: flex;
    text-align: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
    justify-content: left;
    max-width: 500px;
    
}

@media (min-width: 600px) {
    .buttonsContainer {
        flex-direction: row;
        /*            justify-content: end;
*/
    }
}

.column,
.columns {
    width: 100%;
    float: left;
    box-sizing: border-box;
}

.panel {
    background: #070707;
}

p {
    color: #a8b2d1;
}



button {
    background: #686868;
    color: #00ffe8;
}




.EngForTom {
    display: block;
    width: 25%;
    line-height: 0.2vh;
    color: white;
    font-weight: 900;
    font-size: 5.25rem;
    margin: 0 0 1em;
}

button {
    /*    background: #2d6e7e;
*/
    border: 1px solid black;
    font-family: Consolas;
    font-weight: bold;
    font-size: 1.7em;
    padding: .5em 1em;
    cursor: pointer;
    /*    color: #c6de41;
*/
}

.panel {
    position: absolute;
    width: 55%;
    bottom: 0;
    right: 0;
    /*    background: #153b44;
*/
    box-sizing: border-box;
    padding: 15% 7%;
    transform: scaleY(0);
    transform-origin: bottom;
    /*transform:scaleY(0);
    transform-origin:bottom;*/
}

    .panel img {
        width: 120px;
        float: left;
        margin-right: 50px;
        opacity: 0;
        transform: translateY(-200px);
    }

    .panel p {
        font-size: 1.9rem;
        width: 80%;
        opacity: 0;
    }

    .panel .box {
        border: 5px solid #00ffe8;
        width: 65%;
        height: 40%;
        position: absolute;
        left: -7%;
        top: 15%;
        z-index: 1;
        opacity: 0;
        transform: scale(0);
        /*        // bouncy effect
*/
        /*opacity:0;
				transform:scale(0);*/
    }




    p a {
        background: rgba(255, 255, 255, 0);
        border-bottom: 1px solid;
        color: white;
        line-height: 1.4;
        padding: .25em;
        text-decoration: none;
    }

        p a:hover {
            background: white;
            color: red;
        }

.btn {
    z-index: 10000;
    color: cyan;
    cursor: pointer;
    font-size: 16px;
    font-weight: 400;
    line-height: 45px;
    /*    margin: 0 0 2em;
*/ max-width: 160px;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    width: 100%;
    z-index: 100;
}

    /*@media (min-width: 600px) {
    .btn {
        margin: 0 1em 2em;
    }
}*/

    .btn:hover {
        text-decoration: none;
    }



.btn-5 {
    border: 0 solid;
    box-shadow: inset 0 0 20px rgba(0, 255, 255, 0);
    outline: 1px solid;
    outline-color: rgba(0, 255, 255, 0.5);
    outline-offset: 0px;
    text-shadow: none;
    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

    .btn-5:hover {
        /*        border: 1px solid;*/
        box-shadow: inset 0 0 20px rgba(0, 255, 255, 0.5), 0 0 20px rgba(0, 255, 255, 0.2);
        outline-color: rgba(0, 255, 255, 0);
        outline-offset: 15px;
        text-shadow: 1px 1px 2px #427388;
    }

